fix: initialize `ApplicationStartupHookService` only in default mode.